--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-hola mundo
+<!doctype html>
+<hola>
+<head>
+  <meta charset ="UFT-8">
+  <tittle>Christian</tittle>
+</head>
+<body>
+  <h1>hola mundo</h1>
+</body>
+  
+</hola>
