--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <hola>
 <head>
   <meta charset ="UFT-8">
-  <tittle>Christian</tittle>
+  <title>Christian</title>
 </head>
 <body>
   <h4>hola mundo</h4>
