--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset ="UFT-8">
   <title>Christian</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h4>hola mundo</h4>
