--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
   <meta charset ="UFT-8">
   <title>Christian</title>
   <link rel="stylesheet" href="style.css">
+  <script>
+    function myFunction() {
+      document.getElementbyId("demo").innerHTML="Hello Javascript"
+    }
+  </script>
 </head>
 <body>
   <h4>hola mundo</h4>
