--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css">
   <script>
     function myFunction() {
-      document.getElementbyId("demo").innerHTML="Hello Javascript"
+      alert("Hola pishita")
     }
   </script>
 </head>
