--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
   <title>Christian</title>
   <link rel="stylesheet" href="style.css">
   <script>
-    function myFunction() {
-      alert("Hola pishita")
-    }
+    alert ("hola pishita)
   </script>
 </head>
 <body>
