--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Christian</title>
   <link rel="stylesheet" href="style.css">
   <script>
-    alert ("hola pishita)
+    alert ("hola pishita")
   </script>
 </head>
 <body>
