--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
   <meta charset ="UFT-8">
   <title>Christian</title>
   <link rel="stylesheet" href="style.css">
-  <script>
-    alert ("hola pishita")
-  </script>
 </head>
 <body>
-  <h4>hola mundo</h4>
+  <h1>Este es un encabezado de nivel 1.</h1><br>
+  <h6>Este otro es de nivel 6.</h6><br>
+  <p>Ahora voy a definir un parrafo. Dentro del que pondremos texto en <b>negrita</b>
+  ,<i>cursiva</i>, <u>cursiva</u> e incluso <u><b>negrita y subrayada</b></u> simultaneamente
+  y <b><i><u>negrita, cursiva y subrayada</u></i></b> teniendo el anidamiento de etiquetas.
+  Además vamos a mostrar el uso de <sub>subindices</sub> y de <sup>supraindices</sup>, así
+  como <strong>texto resaltado, que no es negrita.</strong></p>
 </body>
 </hola>
