--- a/index.html
+++ b/index.html
@@ -13,5 +13,42 @@
   y <b><i><u>negrita, cursiva y subrayada</u></i></b> teniendo el anidamiento de etiquetas.
   Además vamos a mostrar el uso de <sub>subindices</sub> y de <sup>supraindices</sup>, así
   como <strong>texto resaltado, que no es negrita.</strong></p>
+
+  <ol type="1">
+    Primer elemento. <br>
+    Segundo elemento. <br>
+    Tercer elemento. <br>
+  </ol>
+
+    <ol type="I">
+    Primer elemento. <br>
+    Segundo elemento. <br>
+    Tercer elemento. <br>
+  </ol>
+
+    <ol start="6">
+    Primer elemento. <br>
+    Segundo elemento. <br>
+    Tercer elemento. <br>
+  </ol>
+
+    <ul id="vacio">
+    Primer elemento. <br>
+    Segundo elemento. <br>
+    Tercer elemento. <br>
+    </ul>
+
+    <ul id="cuadrado">
+    Primer elemento. <br>
+    Segundo elemento. <br>
+    Tercer elemento. <br>
+    </ul>
+
+    <ul id="relleno">
+    Primer elemento. <br>
+    Segundo elemento. <br>
+    Tercer elemento. <br>
+    </ul>
+
 </body>
 </hola>
