--- a/index.html
+++ b/index.html
@@ -15,39 +15,39 @@
   como <strong>texto resaltado, que no es negrita.</strong></p>
 
   <ol type="1">
-    Primer elemento. <br>
-    Segundo elemento. <br>
-    Tercer elemento. <br>
+    Primer elemento.
+    Segundo elemento. 
+    Tercer elemento. 
   </ol>
 
-    <ol type="I">
-    Primer elemento. <br>
-    Segundo elemento. <br>
-    Tercer elemento. <br>
+    <ol type="I"> 
+    Primer elemento. 
+    Segundo elemento. 
+    Tercer elemento. 
   </ol>
 
     <ol start="6">
-    Primer elemento. <br>
-    Segundo elemento. <br>
-    Tercer elemento. <br>
+    Primer elemento. 
+    Segundo elemento. 
+    Tercer elemento. 
   </ol>
 
     <ul id="vacio">
-    Primer elemento. <br>
-    Segundo elemento. <br>
-    Tercer elemento. <br>
+    Primer elemento. 
+    Segundo elemento. 
+    Tercer elemento. 
     </ul>
 
     <ul id="cuadrado">
-    Primer elemento. <br>
-    Segundo elemento. <br>
-    Tercer elemento. <br>
+    Primer elemento. 
+    Segundo elemento. 
+    Tercer elemento. 
     </ul>
 
     <ul id="relleno">
-    Primer elemento. <br>
-    Segundo elemento. <br>
-    Tercer elemento. <br>
+    Primer elemento. 
+    Segundo elemento. 
+    Tercer elemento. 
     </ul>
 
 </body>
