--- a/index.html
+++ b/index.html
@@ -15,39 +15,39 @@
   como <strong>texto resaltado, que no es negrita.</strong></p>
 
   <ol type="1">
-    Primer elemento.
-    Segundo elemento. 
-    Tercer elemento. 
+    Primer elemento.<br>
+    Segundo elemento. <br>
+    Tercer elemento. <br>
   </ol>
 
     <ol type="I"> 
-    Primer elemento. 
-    Segundo elemento. 
-    Tercer elemento. 
+    Primer elemento. <br>
+    Segundo elemento. <br>
+    Tercer elemento. <br>
   </ol>
 
     <ol start="6">
-    Primer elemento. 
-    Segundo elemento. 
-    Tercer elemento. 
+    Primer elemento. <br>
+    Segundo elemento. <br>
+    Tercer elemento. <br>
   </ol>
 
     <ul id="vacio">
-    Primer elemento. 
-    Segundo elemento. 
-    Tercer elemento. 
+    Primer elemento. <br>
+    Segundo elemento. <br>
+    Tercer elemento. <br>
     </ul>
 
     <ul id="cuadrado">
-    Primer elemento. 
-    Segundo elemento. 
-    Tercer elemento. 
+    Primer elemento. <br>
+    Segundo elemento. <br>
+    Tercer elemento. <br>
     </ul>
 
     <ul id="relleno">
-    Primer elemento. 
-    Segundo elemento. 
-    Tercer elemento. 
+    Primer elemento. <br>
+    Segundo elemento. <br>
+    Tercer elemento. <br>
     </ul>
 
 </body>
