--- a/index.html
+++ b/index.html
@@ -15,40 +15,40 @@
   como <strong>texto resaltado, que no es negrita.</strong></p>
 
   <ol type="1">
-    Primer elemento.<br>
-    Segundo elemento. <br>
-    Tercer elemento. <br>
+  <li>Primer elemento.</li>
+  <li>Segundo elemento.</li>
+  <li>Tercer elemento.</li>
   </ol>
 
-    <ol type="I"> 
-    Primer elemento. <br>
-    Segundo elemento. <br>
-    Tercer elemento. <br>
+  <ol type="I"> 
+  <li>Primer elemento.</li>
+  <li>Segundo elemento.</li>
+  <li>Tercer elemento.</li>
   </ol>
 
-    <ol start="6">
-    Primer elemento. <br>
-    Segundo elemento. <br>
-    Tercer elemento. <br>
+  <ol start="6">
+  <li>Primer elemento.</li>
+  <li>Segundo elemento.</li>
+  <li>Tercer elemento.</li>
   </ol>
 
-    <ul id="vacio">
-    Primer elemento. <br>
-    Segundo elemento. <br>
-    Tercer elemento. <br>
-    </ul>
+  <ul id="vacio">
+  <li>Primer elemento.</li>
+  <li>Segundo elemento.</li>
+  <li>Tercer elemento.</li>
+  </ul>
 
-    <ul id="cuadrado">
-    Primer elemento. <br>
-    Segundo elemento. <br>
-    Tercer elemento. <br>
-    </ul>
+  <ul id="cuadrado">
+  <li>Primer elemento.</li>
+  <li>Segundo elemento.</li>
+  <li>Tercer elemento.</li>
+  </ul>
 
-    <ul id="relleno">
-    Primer elemento. <br>
-    Segundo elemento. <br>
-    Tercer elemento. <br>
-    </ul>
+  <ul id="relleno">
+  <li>Primer elemento.</li>
+  <li>Segundo elemento.</li>
+  <li><Tercer elemento.</li>
+  </ul>
 
 </body>
 </hola>
