--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <ul id="relleno">
   <li>Primer elemento.</li>
   <li>Segundo elemento.</li>
-  <li><Tercer elemento.</li>
+  <li>Tercer elemento.</li>
   </ul>
 
 </body>
