--- a/index.html
+++ b/index.html
@@ -50,5 +50,53 @@
   <li>Tercer elemento.</li>
   </ul>
 
+<table>
+
+  <tr>
+    <td>Lunes</td>
+    <td>Martes</td>
+    <td>Miercoles</td>
+    <td>Jueves</td>
+    <td>Viernes</td>
+  </tr>
+
+  <tr>
+    <td rowspan="2">Programación</td>
+    <td>Lenguaje Marca</td>
+    <td rowspan="2">Bases de datos</td>
+    <td>Digitalización</td>
+    <td>Sistemas Informaticos</td>
+  </tr>
+
+  <tr>
+    <td rowspan="2">Bases de datos</td>
+    <td>Lenguaje Marca</td>
+  </tr>
+
+  <tr>
+    <td rowspan="2">Entornos de desarrollo</td>
+    <td>Sistemas Informaticos</td>
+  </tr>
+
+  <tr>
+    <td>Programación</td>
+    <td>ITIN Personal</td>
+    <td>Programación</td>
+  </tr>
+
+  <tr>
+    <td rowspan="2">Bases de datos</td>
+    <td>Sostenibilidad</td>
+    <td>Programación</td>
+  </tr>
+
+  <tr>
+    <td>Bases de datos</td>
+    <td>ITIN Personal</td>
+    <td>ITIN Personal</td>
+  </tr>
+
+</table>
+
 </body>
 </hola>
