--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Boletín de Ejercicios.</title>
+</head>
+<body>
+    <h1>Boletín de Ejercicios</h1>
+    <h3><u>Christian García Infantes.</u></h3>
+    <br>
+    <ul>
+        <li><a href="/web/about.html">Sobre mi</a></li>
+    </ul>
+</body>
+</html>
