--- a/web/about.html
+++ b/web/about.html
@@ -13,6 +13,7 @@
     una recomendación de un amigo. Por ahora diría que voy bien y espero terminar el cursado
     sin muchas complicaciones.
     </p>
-    <img src="/img/Yakumo.png" alt="Yakumo">
+    <img src="/img/Yosuke_Hanamura_Winter_uniform.png" alt="Yakumo">
 </body>
+
 </html>
