--- a/web/boletin/about.html
+++ b/web/boletin/about.html
@@ -1,1 +1,19 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sobre mí</title>
+</head>
+<body>
+    <h1>Sobre mí.</h1>
+    <br>
+    <p>Me introduje en dicho grado porque soy un aficionado de la tecnología,
+    además de haber cursado el grado medio de SMR, y decidí elegir este centro por
+    una recomendación de un amigo. Por ahora diría que voy bien y espero terminar el cursado
+    sin muchas complicaciones.
+    </p>
+    <img src="/img/Yosuke_Hanamura_Winter_uniform.png" alt="Yakumo">
+</body>
 
+</html>
