--- a/web/ejerciciosclases/prueba.html
+++ b/web/ejerciciosclases/prueba.html
@@ -1,1 +1,28 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ejercicios clases</title>
+</head>
+<body>
+    <table style="border: 1px solid black;" style="border-collapse: collapse;">
+        <tr>
+            <th>Persona5</th>
+            <th>Persona4</th>
+            <th>Persona3</th>
+        </tr>
 
+        <tr>
+            <td><img src="img/P5_animated_expression_of_Ryuji_Sakamoto_02.png" alt=""></td>
+            <td rowspan="2"><img src="img/YosukeAlt1.png" alt="Yosuke_Invierno"></td>
+            <td><img src="img/jun`pei.jpg" alt=""></td>
+        </tr>
+
+        <tr>
+            <td><img src="img/ryuji.png" alt=""></td>
+            <td><img src="img/Junpei_Social_Link_Sprite.png" alt=""></td>
+        </tr>
+    </table>
+</body>
+</html>
