--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <h3><u>Christian García Infantes.</u></h3>
     <br>
     <ul>
-        <li><a href="/web/about.html">Sobre mi</a></li>
+        <li><a href="/web/boletin/about.html">Sobre mi</a></li>
     </ul>
 </body>
+
 </html>
