--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <h3><u>Christian García Infantes.</u></h3>
     <br>
     <ul>
-        <li><a href="/web/boletin/index.html">Sobre mi</a></li>
+        <li><a href="/web/boletin/index.html">Boletín</a></li>
     </ul>
 </body>
 
 </html>
+
 
