--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Boletín de Ejercicios</h1>
-    <h3><u>Christian García Infantes.</u></h3>
+    <h3>Christian García Infantes.</h3>
     <br>
     <ul>
         <li><a href="/web/boletin/index.html">Boletín</a></li>
@@ -15,5 +15,6 @@
 </body>
 
 </html>
+
 
 
