--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>Boletín de Ejercicios.</title>
 </head>
 <body>
-    <h1>Boletín de Ejercicios</h1>
-    <h3>Christian García Infantes.</h3>
+    <h1>Menú</h1>
     <br>
     <ul>
         <li><a href="/web/boletin/index.html">Boletín</a></li>
@@ -15,6 +14,7 @@
 </body>
 
 </html>
+
 
 
 
