--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
     <br>
     <ul>
         <li><a href="/web/boletin/index.html">Boletín</a></li>
+        <li><a href="/web/ejerciciosclases/prueba.html">Ejercicios de clase</a></li>
     </ul>
 </body>
 
 </html>
+
 
 
 
