Change link to menu from paragraph to heading

--- a/web/boletin/index.html
+++ b/web/boletin/index.html
@@ -6,7 +6,7 @@
     <title>Boletín de Ejercicios.</title>
 </head>
 <body>
-    <a href="/index.html/">Menú</a>
+    <h5><a href="/index.html/">Menú</a></h5>
     <h1>Boletín de Ejercicios</h1>
     <h3>Christian García Infantes.</h3>
     <br>
