Insert menu link in prueba.html
Added a link to the menu in the HTML table.

--- a/web/ejerciciosclases/prueba.html
+++ b/web/ejerciciosclases/prueba.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <table style="border: 1px solid black;" style="border-collapse: collapse;">
+        <a href="/index.html">Menú</a>
         <tr>
             <th>Persona5</th>
             <th>Persona4</th>
@@ -25,4 +26,5 @@
         </tr>
     </table>
 </body>
+
 </html>
