--- a/web/ejerciciosclases/prueba.html
+++ b/web/ejerciciosclases/prueba.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <table style="border: 1px solid black;" style="border-collapse: collapse;">
-        <a href="/index.html">Menú</a>
+        <h4><a href="/index.html">Menú</a></h4>
+        <br>
         <tr>
             <th>Persona5</th>
             <th>Persona4</th>
@@ -28,3 +29,4 @@
 </body>
 
 </html>
+
