--- a/web/ejerciciosclases/index.html
+++ b/web/ejerciciosclases/index.html
@@ -11,7 +11,7 @@
     <h3>Christian García Infantes</h3>
     <br>
     <ul>
-        <li><a href="prueba.html">Sobre mi</a></li>
+        <li><a href="prueba.html">Tabla Imagenes/a></li>
     </ul>
 </body>
 
