--- a/web/boletin/about.html
+++ b/web/boletin/about.html
@@ -6,6 +6,8 @@
     <title>Sobre mí</title>
 </head>
 <body>
+    <h1><a href="/index.html">Menú</a></h1>
+    <br>
     <h1>Sobre mí.</h1>
     <br>
     <p>Me introduje en dicho grado porque soy un aficionado de la tecnología,
