--- a/web/ejerciciosclases/index.html
+++ b/web/ejerciciosclases/index.html
@@ -6,12 +6,12 @@
     <title>Boletín de Ejercicios.</title>
 </head>
 <body>
-    <h1><a href="/index.html">Menú</a></h1>
+    <h1><a style="text-decoration: none; href="/index.html">Menú</a></h1>
     <h1>Ejercicios de clase</h1>
     <h3>Christian García Infantes</h3>
     <br>
     <ul>
-        <li><a href="prueba.html">Tabla Imagenes/a></li>
+        <li><a href="prueba.html">Tabla Imagenes</a></li>
     </ul>
 </body>
 
