--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Boletín de Ejercicios.</title>
 </head>
 <body>
-    <h1">Menú</h1>
+    <h1>Menú</h1>
     <br>
     <ul>
         <li><a href="/web/boletin/index.html">Boletín</a></li>
@@ -15,6 +15,7 @@
 </body>
 
 </html>
+
 
 
 
