Add CSS style for h1 text decoration
Added CSS style to remove text decoration from h1 elements.

--- a/web/ejerciciosclases/prueba.html
+++ b/web/ejerciciosclases/prueba.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicios clases</title>
+    <style>
+        h1 {
+            text-decoration: none;
+        }
+    </style>
 </head>
 <body>
     <table style="border: 1px solid black;" style="border-collapse: collapse;">
@@ -29,5 +34,6 @@
 </body>
 
 </html>
+
 
 
