--- a/web/ejerciciosclases/prueba.html
+++ b/web/ejerciciosclases/prueba.html
@@ -16,19 +16,20 @@
         </tr>
 
         <tr>
-            <td><img src="img/P5_animated_expression_of_Ryuji_Sakamoto_02.png" alt=""></td>
-            <td rowspan="2"><img src="img/YosukeAlt1.png" alt="Yosuke_Invierno"></td>
-            <td><img src="img/jun`pei.jpg" alt=""></td>
+            <td><img src="/img/P5_animated_expression_of_Ryuji_Sakamoto_02.png" alt=""></td>
+            <td rowspan="2"><img src="i/mg/YosukeAlt1.png" alt="Yosuke_Invierno"></td>
+            <td><img src="/img/jun`pei.jpg" alt=""></td>
         </tr>
 
         <tr>
-            <td><img src="img/ryuji.png" alt=""></td>
-            <td><img src="img/Junpei_Social_Link_Sprite.png" alt=""></td>
+            <td><img src="/img/ryuji.png" alt=""></td>
+            <td><img src="/img/Junpei_Social_Link_Sprite.png" alt=""></td>
         </tr>
     </table>
 </body>
 
 </html>
+
 
 
 
