--- a/web/ejerciciosclases/prueba.html
+++ b/web/ejerciciosclases/prueba.html
@@ -17,7 +17,7 @@
 
         <tr>
             <td><img src="/img/P5_animated_expression_of_Ryuji_Sakamoto_02.png" alt=""></td>
-            <td rowspan="2"><img src="i/mg/YosukeAlt1.png" alt="Yosuke_Invierno"></td>
+            <td rowspan="2"><img src="/img/YosukeAlt1.png" alt=""></td>
             <td><img src="/img/jun`pei.jpg" alt=""></td>
         </tr>
 
@@ -29,6 +29,7 @@
 </body>
 
 </html>
+
 
 
 
