--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Boletín de Ejercicios.</title>
+    <title>Menú</title>
 </head>
 <body>
     <h1>Menú</h1>
@@ -15,6 +15,7 @@
 </body>
 
 </html>
+
 
 
 
