Add author name to index.html
Added a new heading with the author's name.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Menú</h1>
+    <h3>Christian García Infantes</h3>
     <br>
     <ul>
         <li><a href="/web/boletin/index.html">Boletín</a></li>
@@ -15,6 +16,7 @@
 </body>
 
 </html>
+
 
 
 
