Change page title and header from 'Menú' to 'Ejercicios'

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Menú</title>
 </head>
 <body>
-    <h1>Menú</h1>
+    <h1>Ejercicios</h1>
     <h3>Christian García Infantes</h3>
     <br>
     <ul>
@@ -16,6 +16,7 @@
 </body>
 
 </html>
+
 
 
 
