--- a/web/boletin/index.html
+++ b/web/boletin/index.html
@@ -11,7 +11,8 @@
     <h3>Christian García Infantes.</h3>
     <br>
     <ul>
-        <li><a href="about.html">Sobre mi</a></li>
+        <li><a href="about.html">About me</a></li>
+        <li><a href="ejercicio1.html">Ejercicio 1</a></li>
     </ul>
 </body>
 
