Enhance ejercicio1.html with menu and headers
Added a menu link and a header to the HTML file.

--- a/web/boletin/ejercicio1.html
+++ b/web/boletin/ejercicio1.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="/css/ejercicio1.css">
 </head>
 <body>
+    <h1><a href="/index.html">Menú</a></h1>
+    <br>
+    <h1>Tablas y enlaces.</h1>
     <table>
         <tr>
             <th>Imagen</th>
@@ -32,4 +35,5 @@
         </tr>
     </table>
 </body>
+
 </html>
