--- a/web/boletin/index.html
+++ b/web/boletin/index.html
@@ -11,8 +11,8 @@
     <h3>Christian García Infantes.</h3>
     <br>
     <ul>
-        <li><a href="about.html">About me</a></li>
-        <li><a href="ejercicio1.html">Ejercicio 1</a></li>
+        <li><a href="about.html">About me.</a></li>
+        <li><a href="ejercicio1.html">Tablas y enlaces.</a></li>
     </ul>
 </body>
 
