--- a/web/boletin/about.html
+++ b/web/boletin/about.html
@@ -6,9 +6,9 @@
     <title>Sobre mí</title>
 </head>
 <body>
-    <h1><a href="/index.html">Menú</a></h1>
+    <h1><a href="/web/boletin/index.html">Boletín</a></h1>
     <br>
-    <h1>Sobre mí.</h1>
+    <h1>Sobre mi.</h1>
     <br>
     <p>Me introduje en dicho grado porque soy un aficionado de la tecnología,
     además de haber cursado el grado medio de SMR, y decidí elegir este centro por
