--- a/web/boletin/ejercicio1.html
+++ b/web/boletin/ejercicio1.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/css/ejercicio1.css">
 </head>
 <body>
-    <h1><a href="/index.html">Menú</a></h1>
+    <h1><a href="/web/boletin/index.html">Boletín</a></h1>
     <br>
     <h1>Tablas y enlaces.</h1>
     <table>
@@ -37,3 +37,4 @@
 </body>
 
 </html>
+
