--- a/web/boletin/about.html
+++ b/web/boletin/about.html
@@ -10,12 +10,18 @@
     <br>
     <h1>Sobre mi.</h1>
     <br>
-    <p>Me introduje en dicho grado porque soy un aficionado de la tecnología,
+    <p>Me metí en dicho grado porque soy un aficionado de la tecnología,
     además de haber cursado el grado medio de SMR, y decidí elegir este centro por
     una recomendación de un amigo. Por ahora diría que voy bien y espero terminar el cursado
     sin muchas complicaciones.
     </p>
-    <img src="/img/Yosuke_Hanamura_Winter_uniform.png" alt="Yakumo">
+    <img src="/img/Yosuke.png" alt="Yosuke Hanamura">
+    <ol>
+        <li>Persona</li>
+        <li>Monster Hunter</li>
+        <li>Black Clover</li>
+        <li>Ninja Gaiden</li>
+    </ol>
 </body>
 
 </html>
