--- a/web/boletin/about.html
+++ b/web/boletin/about.html
@@ -15,7 +15,7 @@
     una recomendación de un amigo. Por ahora diría que voy bien y espero terminar el cursado
     sin muchas complicaciones.
     </p>
-    <img src="/img/Yosuke.png" alt="Yosuke Hanamura">
+    <img width="200px" height="200px" src="/img/Yosuke.png" alt="Yosuke Hanamura">
     <ol>
         <li>Persona</li>
         <li>Monster Hunter</li>
