--- a/web/boletin/index.html
+++ b/web/boletin/index.html
@@ -13,6 +13,7 @@
     <ul>
         <li><a href="about.html">About me.</a></li>
         <li><a href="ejercicio1.html">Tablas y enlaces.</a></li>
+        <li><a href="contacto.html">Formulario contacto.</a></li>
     </ul>
 </body>
 
