--- a/web/boletin/contacto.html
+++ b/web/boletin/contacto.html
@@ -17,8 +17,9 @@
             <br>
             <textarea rows="8" cols="50" placeholder="Introduzca su mensaje." id="mensaje" name="mensaje"></textarea>
         </fieldset>
-        <input type="button" value="Enviar" onclick="enviarFormulario()">
+        <input type="button" value="Enviar">
     </form>
 
 </body>
+
 </html>
