--- a/web/boletin/contacto.html
+++ b/web/boletin/contacto.html
@@ -16,11 +16,12 @@
             <input type="email" id="correo" name="correo">
             <br>
             <textarea rows="8" cols="50" placeholder="Introduzca su mensaje." id="mensaje" name="mensaje"></textarea>
+            <br>
+            <label for="imagen">Subir Imagem</label>
+            <br>
+            <input type="file" id="image" name="image" accept="image">
         </fieldset>
         <input type="submit" value="Enviar">
     </form>
-
 </body>
-
 </html>
-
