--- a/web/boletin/contacto.html
+++ b/web/boletin/contacto.html
@@ -19,7 +19,7 @@
             <br>
             <label for="imagen">Subir Imagem</label>
             <br>
-            <input type="file" id="image" name="image" accept="image">
+            <input type="file" id="imagen" name="imagen">
         </fieldset>
         <input type="submit" value="Enviar">
     </form>
