--- a/web/boletin/contacto.html
+++ b/web/boletin/contacto.html
@@ -6,8 +6,7 @@
     <title>Formulario</title>
 </head>
 <body>
-    <h1><a href="/web/boletin/index.html">Boletín</a></h1>
-    <form action="https://lm.ciclo.iesnervion.es/form3/envio.php" method="post">
+    <form action="https://lm.ciclo.iesnervion.es/form3/envio.php" method="post" enctype="multipart/form-data">
         <h1>FORMULARIO CONTACTO</h1>
         <fieldset>
             <label for="nombre">Nombre</label>
@@ -25,5 +24,4 @@
         <input type="submit" value="Enviar">
     </form>
 </body>
-
 </html>
