--- a/web/boletin/index.html
+++ b/web/boletin/index.html
@@ -14,6 +14,7 @@
         <li><a href="about.html">About me.</a></li>
         <li><a href="ejercicio1.html">Tablas y enlaces.</a></li>
         <li><a href="contacto.html">Formulario contacto.</a></li>
+        <li><a href="ejercicio2.html">Código Embebido.</a></li>
     </ul>
 </body>
 
