--- a/web/boletin/index.html
+++ b/web/boletin/index.html
@@ -15,6 +15,7 @@
         <li><a href="ejercicio1.html">Tablas y enlaces.</a></li>
         <li><a href="contacto.html">Formulario contacto.</a></li>
         <li><a href="ejercicio2.html">Código Embebido.</a></li>
+        <li><a href="pagina3.html">Incluir Multimedia.</a></li>
     </ul>
 </body>
 
