--- a/web/boletin/pagina3.html
+++ b/web/boletin/pagina3.html
@@ -6,8 +6,11 @@
     <title>Incluir Multimedia</title>
 </head>
 <body>
+    <h1><a href="/web/boletin/index.html">Boletín</a></h1>
+    <br>
     <video src="/img/Persona4Goat.mp4" controls>Persona 4</video>
     <br>
     <audio src="/img/Persona4Goat.mp3" controls>Persona 4</audio>
 </body>
+
 </html>
