--- a/CodeFest/index.html
+++ b/CodeFest/index.html
@@ -1,1 +1,32 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CodeFest</title>
+</head>
+<body>
+    <main>
+    <header>
+        <h1>CodeFest 2025</h1>
+        <h2>Donde la Música y el Código se encuentran.</h2>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="web/cartel.html">Cartel</a></li>
+            <li><a href="web/localizacion.html">Localización</a></li>
+            <li><a href="web/entradas.html">Entradas</a></li>
+        </ul>
+    </nav>
+    <main>
+        <section>
+            <h3>¡No te lo pierdas!</h3>
+            <p>El festival hablará sobre diferentes temás, el principal sobre 
+            códigos acompañado de agradables y confortantes tonos músicales.</p>
 
+        </section>
+    </main>
+    <footer><p>© 2025 CodeFest. Todos los derechos reservados</p></footer>
+</body>
+</html>
