--- a/CodeFest/index.html
+++ b/CodeFest/index.html
@@ -23,7 +23,7 @@
             <h3>¡No te lo pierdas!</h3>
             <p>El festival hablará sobre diferentes temás, el principal sobre 
             códigos acompañado de agradables y confortantes tonos músicales.</p>
-
+            <img src="/img/persona4festival.jpg" alt="Persona 4 Festival">
         </section>
     </main>
     <footer><p>© 2025 CodeFest. Todos los derechos reservados</p></footer>
