--- a/CodeFest/index.html
+++ b/CodeFest/index.html
@@ -3,30 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CodeFest</title>
-    <link rel="stylesheet" href="/css/estilos.css">
+    <title>Página Principal</title>
+    <link rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
 <body>
     <header>
-        <h1>CodeFest 2025</h1>
-        <h2>Donde la Música y el Código se encuentran.</h2>
-        <nav>
+        <h1>Codefest 2025</h1>
+        <h2>Donde la Música y el Código se encuentran</h2>
+    </header>
+    <nav>
         <ul>
             <li><a href="index.html">Inicio</a></li>
             <li><a href="web/cartel.html">Cartel</a></li>
-            <li><a href="web/localizacion.html">Localización</a></li>
+            <li><a href="web/localizacion.html">Localizacion</a></li>
             <li><a href="web/entradas.html">Entradas</a></li>
         </ul>
-        </nav>
-    </header>
+    </nav>
     <main>
         <section>
             <h3>¡No te lo pierdas!</h3>
-            <p>El festival hablará sobre diferentes temás, el principal sobre 
-            códigos acompañado de agradables y confortantes tonos músicales.</p>
-            <img src="/img/persona4festival.jpg" alt="Persona 4 Festival">
+            <p>El festival de código más emocionante te espera: juegos, música, comida, diversión y más</p>
+            <img src="img/festival.jpg" alt="festival" width="400" height="220">
         </section>
     </main>
-    <footer><p>© 2025 CodeFest. Todos los derechos reservados</p></footer>
+    <footer>
+        <p>© 2025 CodeFest. Todos los derechos reservados.</p>
+    </footer>
 </body>
 </html>
