--- a/CodeFest/index.html
+++ b/CodeFest/index.html
@@ -22,12 +22,13 @@
     <main>
         <section>
             <h3>¡No te lo pierdas!</h3>
-            <p>El festival de código más emocionante te espera: juegos, música, comida, diversión y más</p>
-            <img src="img/festival.jpg" alt="festival" width="400" height="220">
+            <p>El festival de código más interesante y emocionante te espera, con tematica de la famosa saga de Persona !¡</p>
+            <img src="img/persona4festival.jpg" alt="festival" width="400" height="220">
         </section>
     </main>
     <footer>
         <p>© 2025 CodeFest. Todos los derechos reservados.</p>
     </footer>
 </body>
+
 </html>
