--- a/CodeFest/index.html
+++ b/CodeFest/index.html
@@ -23,7 +23,7 @@
         <section>
             <h3>¡No te lo pierdas!</h3>
             <p>El festival de código más interesante y emocionante te espera, con tematica de la famosa saga de Persona !¡</p>
-            <img src="img/persona4festival.jpg" alt="festival" width="400" height="220">
+            <img src="/img/persona4festival.jpg" alt="festivalpersona width="400" height="220">
         </section>
     </main>
     <footer>
@@ -32,3 +32,4 @@
 </body>
 
 </html>
+
