--- a/CodeFest/web/localizacion.html
+++ b/CodeFest/web/localizacion.html
@@ -19,8 +19,16 @@
             <li><a href="entradas.html">Entradas</a></li>
         </ul>
     </nav>
+    <ul>
+        <li><a href="#Mapa">Ver Mapa</a></li>
+        <li><a href="#Video">Ver Aftermovie</a></li>
+    </ul>
     <main>
-        
+        <h2 id="Mapa">Cómo Llegar</h2>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d103723.77526817031!2d139.5649819625!3d35.66794030000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188cb579969bcb%3A0xe59feb1f07f05c8c!2sEvent%20Plaza%20Of%20Yoyogi!5e0!3m2!1ses!2ses!4v1763025851931!5m2!1ses!2ses" width="600" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></iframe>
+        <h2 id="Video">Revive la ultima edición</h2>
+        <iframe src="https://www.youtube.com/embed/Dj_eYR-hjWg?si=eNsgMRtgwME_Uc2K" width="600" height="450" video player frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></iframe>
+        <audio src="/img/2-17. Heaven.mp3" controls></audio>
     </main>
     <footer>
         <p>© 2025 CodeFest. Todos los derechos reservados.</p>
