--- a/CodeFest/index.html
+++ b/CodeFest/index.html
@@ -23,11 +23,12 @@
         <section>
             <h3>¡No te lo pierdas!</h3>
             <p>El festival de código más emocionante te espera: juegos, música, comida, diversión y más</p>
-            <img src="img/festival.jpg" alt="festival" width="400" height="220">
+            <img src="/img/festival.jpg" alt="festival" width="400" height="220">
         </section>
     </main>
     <footer>
         <p>© 2025 CodeFest. Todos los derechos reservados.</p>
     </footer>
 </body>
+
 </html>
