--- a/CodeFest/index.html
+++ b/CodeFest/index.html
@@ -22,7 +22,7 @@
     <main>
         <section>
             <h3>¡No te lo pierdas!</h3>
-            <p>El festival de código más emocionante te espera: juegos, música, comida, diversión y más</p>
+            <p>El festival de código más emocionante e interesante llega en nada, y este año aún mejor, pues viene con tematica de Persona!¡</p>
             <img src="img/persona4festival.jpg" alt="festival" width="400" height="220">
         </section>
     </main>
@@ -32,4 +32,5 @@
 </body>
 
 </html>
+
 
