--- a/CodeFest/index.html
+++ b/CodeFest/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página Principal</title>
+    <title>CodeFest Persona</title>
     <link rel="stylesheet" type="text/css" href="css/estilos.css">
 </head>
 <body>
@@ -32,5 +32,6 @@
 </body>
 
 </html>
+
 
 
