--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
     <ul>
         <li><a href="/web/boletin/index.html">Boletín</a></li>
         <li><a href="/web/ejerciciosclases/index.html">Ejercicios de clase</a></li>
+        <li><a href="CodeFest/index.html>CodeFest</a></li>
+
     </ul>
 </body>
 
 </html>
+
 
 
 
