Add 'Boletín CSS' link to index.html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <br>
     <ul>
         <li><a href="/web/boletin/index.html">Boletín</a></li>
+        <li><a href="/web/boletincss/index.html">Boletín CSS</a></li>
         <li><a href="/web/ejerciciosclases/index.html">Ejercicios de clase</a></li>
         <li><a href="CodeFest/index.html">CodeFest</a></li>
 
@@ -18,6 +19,7 @@
 </body>
 
 </html>
+
 
 
 
